_sass/_masthead.scss
/* ==========================================================================
   MASTHEAD
   ========================================================================== */

.masthead {
  position: relative;
  border-bottom: 1px solid $border-color;
  -webkit-animation: intro 0.3s both;
          animation: intro 0.3s both;
  -webkit-animation-delay: 0.15s;
          animation-delay: 0.15s;
  z-index: 20;

  &__inner-wrap {
    @include container;
    @include clearfix;
    display: -webkit-box;
    display: flex;
    -webkit-box-pack: justify;
     justify-content: space-between;
    font-family: $sans-serif-narrow;

    @include breakpoint($x-large) {
      max-width: $x-large;
    }

    nav {
      z-index: 10;
    }

    a {
      text-decoration: none;
    }
  }
}

.greedy-nav a.site-title {
  display: -webkit-box;
  display: flex;
  padding: 0.5rem 0;
  align-self: stretch;
  -webkit-box-align: center;
        align-items: center;
  font-weight: bold;
  z-index: 20;
}

.masthead__menu {
  width: 100%;

  .site-nav {
    margin-left: auto;

    @include breakpoint($small) {
      float: right;
    }
  }

  ul {
    margin: 0;
    padding: 0;
    clear: both;
    list-style-type: none;
  }
}

.masthead__menu-item {
  display: block;
  list-style-type: none;
  white-space: nowrap;

  &--lg {
    padding-right: 2em;
    font-weight: 700;
  }
}

.greedy-nav a.hamburger {
  display: none;
}

@media screen and (max-width: 600px) {
  .greedy-nav a:not(:first-child) {display: none;}

  .greedy-nav a.hamburger, .greedy-nav a.site-title {
    display: block;
  }

  nav.greedy-nav.popdown {
    display: block;
  }

  .greedy-nav.popdown a {
    display: block;
  }

  .greedy-nav.popdown a.hamburger {
    position: absolute;
    right: 0;
    top: 0;
  }

  .greedy-nav.popdown a.site-title {
    display: none;
  }
}

